# GameEngine-example

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh  shader.frag.hlsl  shader.vert.hlsl  test.sh  valgrind.supp
data/: shader.frag.hlsl  shader.vert.hlsl  spritemap.json
src/: CMakeLists.txt  game.cpp  main.cpp  player.cpp  player.h
src/tex/: spritemap.json
